[gd_scene load_steps=8 format=3 uid="uid://mgk024n56kuo"]

[ext_resource type="Script" path="res://SettingsMenu.gd" id="1_c8hjg"]
[ext_resource type="Texture2D" uid="uid://deqtm41kpw1xm" path="res://images/main_screen_image.jpg" id="1_lj2fe"]
[ext_resource type="FontFile" uid="uid://dm5qvkkavxgxc" path="res://fonts/BAD GRUNGE.ttf" id="1_vkd7c"]
[ext_resource type="Texture2D" uid="uid://cv23o51lhrql4" path="res://images/3 Crosshairs/Crosshair 3_small.png" id="4_hn1yn"]

[sub_resource type="LabelSettings" id="LabelSettings_30esk"]
font = ExtResource("1_vkd7c")
font_size = 140
font_color = Color(0.831392, 0.492849, 7.70092e-07, 1)
shadow_color = Color(0.360128, 0.208358, 0, 1)

[sub_resource type="Theme" id="Theme_thho8"]
/colors/white = Color(1, 1, 1, 1)
/styles/white = null
CheckBox/icons/unchecked = ExtResource("4_hn1yn")

[sub_resource type="CanvasTexture" id="CanvasTexture_i33iv"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8hjg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="game_title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 120.0
offset_top = 100.0
offset_right = 932.0
offset_bottom = 257.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.835294, 0.509804, 0, 1)
theme_override_colors/font_shadow_color = Color(0.360128, 0.208358, 0, 1)
text = "Settings"
label_settings = SubResource("LabelSettings_30esk")
horizontal_alignment = 1

[node name="main_screen_image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 1080.0
offset_bottom = 540.0
grow_vertical = 2
texture = ExtResource("1_lj2fe")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1120.0
offset_top = 50.0
offset_right = 1206.0
offset_bottom = 100.0
theme_override_colors/font_hover_color = Color(0.385493, 0.385492, 0.385492, 1)
theme_override_fonts/font = ExtResource("1_vkd7c")
theme_override_font_sizes/font_size = 70
text = "BACK"
flat = true

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.07
anchor_bottom = 0.07
offset_left = 1715.0
offset_top = 856.4
offset_right = 1820.0
offset_bottom = 938.4
theme_override_fonts/font = ExtResource("1_vkd7c")
theme_override_font_sizes/font_size = 70
text = "SAVE
"
flat = true

[node name="MouseSensitivityContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 1120.0
offset_top = 350.0
offset_right = 1820.0
offset_bottom = 373.0
theme_override_constants/separation = 80

[node name="MouseSensitivityLabel" type="Label" parent="MouseSensitivityContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Mouse Sensitivity"

[node name="MouseSensitivitySlider" type="HSlider" parent="MouseSensitivityContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 0.1

[node name="MouseSensitivityValue" type="Label" parent="MouseSensitivityContainer"]
layout_mode = 2

[node name="VolumeContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1120.0
offset_top = 430.0
offset_right = 1820.0
offset_bottom = 458.0
theme_override_constants/separation = 70

[node name="VolumeLabel" type="Label" parent="VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volume                    "

[node name="VolumeSlider" type="HSlider" parent="VolumeContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="VolumeValue" type="Label" parent="VolumeContainer"]
layout_mode = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1120.0
offset_top = 510.0
offset_right = 1334.0
offset_bottom = 550.0
theme_override_constants/separation = 240

[node name="ResolutionLabel" type="Label" parent="ResolutionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resolution"

[node name="ResolutionOptionButton" type="OptionButton" parent="ResolutionContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="WindowedModeContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1120.0
offset_top = 590.0
offset_right = 1345.0
offset_bottom = 630.0
theme_override_constants/separation = 370

[node name="WindowedModeLabel" type="Label" parent="WindowedModeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Activate Windowed Mode"

[node name="WindowedModeCheckBox" type="CheckBox" parent="WindowedModeContainer"]
layout_mode = 2
theme = SubResource("Theme_thho8")
icon = SubResource("CanvasTexture_i33iv")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="value_changed" from="MouseSensitivityContainer/MouseSensitivitySlider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="VolumeContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
